--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,10 @@ ul {
 }
 .bg3-container{
 	background-image: url("/img/bg-3.jpg");
-	min-height: 400px;
+	min-height: 700px;
 }
 
-.txt1-center-container, .txt2-center-container, .txt3-center-container{
+.txt1-center-container, .txt2-center-container{
 	position:absolute;	/* the element is positioned absolutely to its first positioned parent*/
 	top:40%;
 	width:100%;
@@ -74,12 +74,14 @@ ul {
 } 
 
 
-.flex-3-box-container, .flex-2-box-container, .flex-4-box-container{
+.flex-3-box-container, .flex-2-box-container, .flex-4-box-container,.flex-big-box-container{
 	display:flex;
 	flex-direction:row;
 	justify-content: center;
 	flex-wrap:nowrap;
-	margin: 5em 10em 4em 10em;
+	margin-top:5em;
+	margin-left:10%;
+	margin-right:10%;
 }
 
 .box{
@@ -88,7 +90,7 @@ ul {
 	flex-direction:column;
 }
 .box-1,.box-2,.box-3 {
-	width:20em;
+	width:25em;
 	margin-right: 30px;
 
 }
@@ -97,7 +99,7 @@ ul {
 	margin-right: 30px;
 }
 
-.text{
+.textbox{
 	padding:20px;
 	font-size: 20px;
 }
@@ -106,6 +108,36 @@ ul {
 	margin-right: 30px;
 }
 
+.txt3-center-container{
+	position:absolute;
+	top:20%;
+	width:100%;
+	text-align:center;
+	color:white;
+} 
+.form-container {
+	margin: 0 20% 0 20%;
+}
+.form-left{
+	float:left;
+}
+.form-right{
+	float: right;
+}
 
+.form-container p, input[type=text], textarea{
+	float:left;	/* solve collapsing margin in p*/
+	background-color: white;
+	opacity:0.4;
+	width:900px;
+	color: black;
+}
+input[type=text], textarea{
+	width:30em;
+}
+
+.form-container p,.form-left,textarea{
+	height:100px;
+}
 
 
